[gd_scene load_steps=6 format=3 uid="uid://c4bxnhtbysf6u"]

[ext_resource type="Theme" uid="uid://clefja284aktg" path="res://code/ui/menu/default_theme.tres" id="1_ubj2q"]
[ext_resource type="Script" path="res://code/ui/menu/died_menu.gd" id="2_obb3v"]

[sub_resource type="EventAsset" id="EventAsset_ocho2"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Select"
guid = "{43d191c0-e538-480e-b59c-454ca2c830e1}"
name = "Select"

[sub_resource type="EventAsset" id="EventAsset_5sq3x"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Confirm"
guid = "{1e9a621e-e9d4-4ddf-8701-b1e42a6e0417}"
name = "Confirm"

[sub_resource type="EventAsset" id="EventAsset_mks7r"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Unpause"
guid = "{954650f4-edfb-41e2-8818-42437037af56}"
name = "Unpause"

[node name="DiedMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -106.0
offset_right = 100.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ubj2q")
script = ExtResource("2_obb3v")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "You have died"
horizontal_alignment = 1

[node name="Respawn" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Respawn"

[node name="Settings" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="SelectSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_ocho2")

[node name="ConfirmSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_5sq3x")

[node name="UnpauseSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_mks7r")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Margin/VBox/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="Margin/VBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Margin/VBox/Exit" to="." method="_on_exit_pressed"]
